# Computational-Geometry

./: .gitignore  CMakeLists.txt  README.md
asset/: guita.plsg  simple.plsg  sphere.glb
doc/: A condition guaranteeing the existence of higher-dimensional constrained Delaunay triangulations.md  Adaptive Precision Floating-Point Arithmetic and Fast Robust Geometric Predicates.md  Computing dirichlet tessellations.md  Computing the n-dimensional Delaunay tessellation with application to Voronoi polytopes.md  Constrained Delaunay Tetrahedralizations and Provably Good Boundary Recovery.md  Constrained Delaunay triangulation.md  Incremental topological flipping works for regular triangulations.md  Meshing Piecewise Linear Complexes by Constrained Delaunay Tetrahedralizations.md
shader/: compile.bat  object.frag  object.vert  triangle.frag  triangle.vert
shader/compile/: object_frag.spv  object_vert.spv  triangle_frag.spv  triangle_vert.spv
src/: main.cpp
src/00 CV test/: file_format_conver.cpp  show_dot.cpp  show_line.cpp  show_triangle.cpp
src/01 Convex Hull/: convex_hull.cpp  convex_hull_01.h  convex_hull_02.h  convex_hull_03.h  convex_hull_04.h  show_triangle.cpp
src/02 intersection/: intersection.cpp  intersection_01.h
src/03 Delaunay/: delaunay_01.h
src/03 Polygon/: polygon_gen.cpp  polygon_monotonicity.cpp
src/04 Delaunay/: delaunay.cpp
src/04 Voronoi/: voronoi.cpp  voronoi_01.h
src/05 Delaunay/: delaunay.cpp  delaunay_01.h  delaunay_02.h  non_delaunay_01.h
src/06 Convex Hull 3D/: convex_hull.cpp  convex_hull_01.h
src/06 Delaunay 3D/: delaunay.cpp  delaunay_01.h  delaunay_02.h
src/07 Interpolation 4D/: interpolation.cpp  interpolation_01.h  interpolation_02.h  interpolation_03.h
src/08 Constrained DT/: constrained_DT.cpp  constrained_DT_01.h
src/09 Constrained DT 3D/: constrained_DT.cpp  constrained_DT_01.h
src/10 unwrap/: unwrap.cpp  unwrap_01.h
src/common/: helper.cpp  helper.h  memory.h  priority_queue.h  typedef.h  vulkan_app.h
src/common/file/: format_convert.cpp  format_convert.h
src/common/predicates/: predicates.cpp
src/common/timer/: timer.cpp  timer.h
src/common/vulkan/: VulkanDevice.cpp  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanUIOverlay.h
third/CDT/include/: Triangulation.hpp
third/opencv4/: setup_vars_opencv4.cmd
third/opencv4/x64/vc17/lib/: OpenCVModules-debug.cmake  OpenCVModules.cmake  opencv_calib3d480d.lib  opencv_core480d.lib  opencv_dnn480d.lib  opencv_features2d480d.lib  opencv_flann480d.lib  opencv_gapi480d.lib  opencv_highgui480d.lib  opencv_imgcodecs480d.lib  opencv_imgproc480d.lib  opencv_ml480d.lib  opencv_objdetect480d.lib  (+4 more)
